--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
           padding-left: 10px;
           font-size: 20px;
           border-radius: 5px;
-          box-shadow: 5px 5px 5px #ccc;
-
+          box-shadow: 3px 3px 3px #ccc;
 		  align:center
-
       }
       a {
           text-decoration: none;
@@ -34,9 +32,36 @@
 		margin:0 auto;
 		width:1000px
 	  }
+	  .button {
+		background: #e33e33;
+		color: #fff;
+		border: 1px solid #e33e33;
+		border-radius: 4px;
+		font-size: 14px;
+		height: 28px;
+		margin: 8px 4px 0 4px;
+	  }
+	  .title {
+		background-color: #fff;
+		font-family: "Lato", Helvetica Neue, Helvetica, Arial, sans-serif;
+		box-shadow: 1px 1px 1px #bbb;
+		height:100px;
+		margin-top: 0px;
+		color: #777;
+		font-size: 30px;
+	  }
+	  .title_content {
+		display:block;
+		margin-left:400px;
+	  }
+
     </style>
   </head>
-  <body>
+  <body style="background-color:#eee;padding:0;margin:0">
+	<div class="title">
+		<span class="title_content" style=""><b>知易行难</b></span>
+		<span class="title_content"  style="margin-left:480px;margin-top:10px"><b>勤学强记</b></span>
+	</div>
 	<div class="outer">
 		<h1 class="postTitle">数据库核心技术总结</h1>
 		<div>
@@ -113,6 +138,112 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/AtomicLongFieldUpdater.md">JAVA AtomicLongFieldUpdater</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/LockSupport.md">JAVA LockSupport</a></span>
 		</div>
+		<h1 class="postTitle">Docker</h1>
+		<div>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker1.md">Docker 概述</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker2.md">Docker 安装使用</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker3.md">Docker 镜像命令解析</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker4.md">Docker 容器命令解析</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker5.md">Docker 常用命令</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker6.md">Docker 实例</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker7.md">Docker 图形化界面管理工具portainer</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker8.md">Docker 联合文件系统</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker9.md">Docker 容器数据卷</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker10.md">Docker 常用命令</a></span>
+		</div>
+		<h1 class="postTitle">Elasticsearch（持续更新）</h1>
+		<div>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es1.md">Elasticsearch 概述</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es2.md">Elasticsearch 安装使用</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es3.md">Elasticsearch 倒排索引</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es4.md">Elasticsearch IK分词器</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es5.md">Elasticsearch 基本命令使用</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es6.md">Elasticsearch SpringBoot集成ES</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es7.md">Elasticsearch 高级使用待更新......</a></span>
+		</div>
+		<h1 class="postTitle">Java 查漏补缺</h1>
+		<div>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core1.md">JAVA 概述</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core2.md">JAVA 异常</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core3.md">JAVA final</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core4.md">JAVA 引用类型</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core5.md">JAVA 字符串</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core6.md">JAVA 动态代理</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core7.md">JAVA 包装</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core8.md">JAVA 常用集合</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core9.md">JAVA Map</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core10.md">JAVA IO</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core11.md">JAVA 文件拷贝</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core12.md">JAVA 接口和抽象类</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core13.md">JAVA 设计模式</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core14.md">JAVA synchronized和ReentrantLock</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core15.md">JAVA synchronized底层简述</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core16.md">JAVA 一个线程两次调用start</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core17.md">JAVA 死锁</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core18.md">JAVA JUC</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core19.md">JAVA Queue</a></span>
+
+		</div>
+
+		<h1 class="postTitle">算法练习总结</h1>
+		<span class="button"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/leetcode.md" style="color:#fff">LEETCODE 题型汇总</a></span>
+		<div>
+
+			<p style="margin-left:20px"><b>动态规划</b></p>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp.md">解题思路</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp2.md">494.目标和</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp3.md">5.最长回文子串</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp4.md">53. 最大子序和</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp5.md">300. 最长上升子序列</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp6.md">72. 编辑距离</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp7.md">1143. 最长公共子序列</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp8.md">62. 不同路径</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp9.md">63. 不同路径 </a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp10.md">416. 分割等和子集</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp11.md">494. 分割等和子集</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp12.md">322. 零钱兑换</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp13.md">518. 零钱兑换 </a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp14.md">139. 单词拆分</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp15.md">10. 正则表达式匹配</a></span>
+		</div>
+		<h1 class="postTitle">Hadoop 学习笔记（暂停）</h1>
+		<div>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop1.md">Hadoop 基础概念</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop2.md">Hadoop 网络配置</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop3.md">Hadoop 安装启动</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop4.md">Hadoop 配置历史服务器</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop5.md">Hadoop 完全分布式</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop6.md">Hadoop 集群时间同步</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop7.md">Hadoop HDFS概念详解</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop8.md">Hadoop HDFS的SHELL操作</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop9.md">Hadoop JAVA框架API实例</a></span>
+		</div>
+		<h1 class="postTitle">杂记</h1>
+		<div>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/deep_copy.md">深度拷贝</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/loop_var.md">循环变量</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/rpc_http.md">RPC和HTTP</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/rpc_impl.md">实现简单地RPC框架</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/socket.md">socket和长连接</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/unicode.md">各种字符集汇总</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/同步异步和阻塞非阻塞.md">同步异步和阻塞非阻塞详解</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/零拷贝.md">零拷贝</a></span>
+			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Overload和Override的区别.md">重载和复写</a></span>
+		</div>
+		<h1 class="postTitle">持续更新中......</h1>
+		<h1 class="postTitle">Kafka</h1>
+		<h1 class="postTitle">Redis</h1>
+		<h1 class="postTitle">MongoDB</h1>
+		<h1 class="postTitle">Python</h1>
+		<h1 class="postTitle">Git</h1>
+		<h1 class="postTitle">设计模式</h1>
+		<h1 class="postTitle">SpringCloud</h1>
+		<h1 class="postTitle">Spring 源码解析</h1>
+		<h1 class="postTitle">JVM</h1>
+		<h1 class="postTitle">数据结构</h1>
+		<h1 class="postTitle">Rabbit</h1>
+		<h1 class="postTitle">linux</h1>
+
 	</div>
   </body>
 </html>
