--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="icon" href="../pic/icon/title.jpg" type="image/x-icon"/>
     <style media="screen">
       .postTitle {
           font-family: "Lato", Helvetica Neue, Helvetica, Arial, sans-serif;
