--- a/index.html
+++ b/index.html
@@ -18,50 +18,49 @@
           font-size: 20px;
           border-radius: 5px;
           box-shadow: 3px 3px 3px #ccc;
-		  align:center
+    		  align:center
       }
       a {
           text-decoration: none;
           color: #258fb8;
       }
-	  .link {
-		display:block;
-		margin: 5px auto;
-		padding-left: 20px;
-	  }
-	  .outer {
-		margin:0 auto;
-		width:1000px
-	  }
-	  .button {
-		background: #e33e33;
-		color: #fff;
-		border: 1px solid #e33e33;
-		border-radius: 4px;
-		font-size: 14px;
-		height: 28px;
-		margin: 8px 4px 0 4px;
-	  }
-	  .title {
-		background-color: #fff;
-		font-family: "Lato", Helvetica Neue, Helvetica, Arial, sans-serif;
-		box-shadow: 1px 1px 1px #bbb;
-		height:100px;
-		margin-top: 0px;
-		color: #777;
-		font-size: 30px;
-	  }
-	  .title_content {
-		display:block;
-		margin-left:400px;
-	  }
-
+  	  .link {
+    		display:block;
+    		margin: 5px auto;
+    		padding-left: 20px;
+  	  }
+  	  .outer {
+    		margin:0 auto;
+    		width:1000px
+    	 }
+  	  .button {
+    		background: #e33e33;
+    		color: #fff;
+    		border: 1px solid #e33e33;
+    		border-radius: 4px;
+    		font-size: 14px;
+    		height: 28px;
+    		margin: 8px 4px 0 4px;
+  	  }
+  	  .title {
+    		background-color: #fff;
+    		font-family: "Lato", Helvetica Neue, Helvetica, Arial, sans-serif;
+    		box-shadow: 1px 1px 1px #bbb;
+    		height:100px;
+    		margin-top: 0px;
+    		color: #777;
+    		font-size: 30px;
+  	  }
+  	  .title_content {
+    		display:block;
+    		margin-left:400px;
+  	  }
     </style>
   </head>
   <body style="background-color:#eee;padding:0;margin:0">
 	<div class="title">
 		<span class="title_content" style=""><b>知易行难</b></span>
-		<span class="title_content"  style="margin-left:480px;margin-top:10px"><b>勤学强记</b></span>
+		<span class="title_content"  style="margin-left:480px;margin-top:10px"><b>温故知新</b></span>
 	</div>
 	<div class="outer">
 		<h1 class="postTitle">数据库核心技术总结</h1>
