--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
   	  }
   	  .title_content {
     		display:block;
-    		margin-left:400px;
+    		margin-left:0px;
   	  }
     </style>
   </head>
   <body style="background-color:#eee;padding:0;margin:0">
-	<div class="title">
-		<span class="title_content" style=""><b>知易行难</b></span>
-		<span class="title_content"  style="margin-left:480px;margin-top:10px"><b>温故知新</b></span>
-	</div>
+    <div class="title">
+  		<div style="width:1000px;margin:0 auto;">
+  			<span class="title_content"><b>知易行难</b></span>
+  			<span class="title_content"  style="margin-left:80px;margin-top:10px"><b>温故知新</b></span>
+  		</div>
+  	</div>
 	<div class="outer">
 		<h1 class="postTitle">数据库核心技术总结</h1>
 		<div>
