--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentHashMap1.md">JAVA ConcurrentHashMap jdk1.7</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentHashMap2.md">JAVA ConcurrentHashMap jdk1.8</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentSkipListMap.md">JAVA ConcurrentSkipListMap</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentLinkedQueue.md">JAVA ConcurrentLinkedQueue</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/PriorityBlockingQueue.md">JAVA PriorityBlockingQueue</a></span>
 		</div>
     <h1 class="postTitle">JAVA 集合底层原理和源码解析</h1>
 		<div>
