--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentSkipListMap.md">JAVA ConcurrentSkipListMap</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentLinkedQueue.md">JAVA ConcurrentLinkedQueue</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/PriorityBlockingQueue.md">JAVA PriorityBlockingQueue</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/DelayQueue.md">JAVA DelayQueue</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/LinkedTransferQueue.md">JAVA LinkedTransferQueue</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ScheduledThreadPoolExecutor.md">JAVA ScheduledThreadPoolExecutor</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/SynchronousQueue.md">JAVA SynchronousQueue</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadPoolExecutor.md">JAVA ThreadPoolExecutor</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadLocal.md">JAVA ThreadLocal</a></span>
+
+
+
+
 		</div>
     <h1 class="postTitle">JAVA 集合底层原理和源码解析</h1>
 		<div>
@@ -162,6 +173,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker9.md">Docker 容器数据卷</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker10.md">Docker DockerFile</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker11.md">Docker DockerFile实战</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker12.md">Docker Docker网络</a></span>
 		</div>
 		<h1 class="postTitle">Elasticsearch（持续更新）</h1>
 		<div>
@@ -253,8 +265,10 @@
 		<h1 class="postTitle">JVM</h1>
 		<h1 class="postTitle">数据结构</h1>
 		<h1 class="postTitle">Rabbit</h1>
-		<h1 class="postTitle">linux</h1>
-
+		<h1 class="postTitle">Linux</h1>
+    <h1 class="postTitle">NIO</h1>
+    <h1 class="postTitle">Netty</h1>
+    <h1 class="postTitle">K8S</h1>
 	</div>
   </body>
 </html>
