--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadLocal.md">JAVA ThreadLocal</a></span>
 
 
-
-
 		</div>
     <h1 class="postTitle">JAVA 集合底层原理和源码解析</h1>
 		<div>
@@ -160,6 +158,10 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql25.md">MySQL 易错知识点总结</a></span>
 		</div>
 
+    <h1 class="postTitle">Redis</h1>
+    <div>
+    </div>
+
 		<h1 class="postTitle">Docker</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker1.md">Docker 概述</a></span>
@@ -173,8 +175,15 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker9.md">Docker 容器数据卷</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker10.md">Docker DockerFile</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker11.md">Docker DockerFile实战</a></span>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker12.md">Docker Docker网络</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker12.md">Docker 远程仓库</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker13.md">Docker 网络</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker14.md">Docker 容器互联-自定义网络</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker15.md">Docker 网络实战-部署Redis集群</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker16.md">Docker 集成SpringBoot</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker17.md">Docker Compose待更新.....</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker18.md">Docker Swarm待更新.....</a></span>
 		</div>
+
 		<h1 class="postTitle">Elasticsearch（持续更新）</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es1.md">Elasticsearch 概述</a></span>
@@ -185,6 +194,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es6.md">Elasticsearch SpringBoot集成ES</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/elasticsearch/es7.md">Elasticsearch 高级使用待更新......</a></span>
 		</div>
+
 		<h1 class="postTitle">Java 查漏补缺</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core1.md">JAVA 概述</a></span>
@@ -211,7 +221,6 @@
 		<h1 class="postTitle">算法练习总结</h1>
 		<span class="button"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/leetcode.md" style="color:#fff">LEETCODE 题型汇总</a></span>
 		<div>
-
 			<p style="margin-left:20px"><b>动态规划</b></p>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp.md">解题思路</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp2.md">494.目标和</a></span>
@@ -229,6 +238,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp14.md">139. 单词拆分</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/dp15.md">10. 正则表达式匹配</a></span>
 		</div>
+
 		<h1 class="postTitle">Hadoop 学习笔记（暂停）</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop1.md">Hadoop 基础概念</a></span>
@@ -241,6 +251,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop8.md">Hadoop HDFS的SHELL操作</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop9.md">Hadoop JAVA框架API实例</a></span>
 		</div>
+
 		<h1 class="postTitle">杂记</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/deep_copy.md">深度拷贝</a></span>
@@ -253,6 +264,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/零拷贝.md">零拷贝</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Overload和Override的区别.md">重载和复写</a></span>
 		</div>
+
 		<h1 class="postTitle">持续更新中......</h1>
 		<h1 class="postTitle">Kafka</h1>
 		<h1 class="postTitle">Redis</h1>
