--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentSkipListMap.md">JAVA ConcurrentSkipListMap</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ConcurrentLinkedQueue.md">JAVA ConcurrentLinkedQueue</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/PriorityBlockingQueue.md">JAVA PriorityBlockingQueue</a></span>
-<<<<<<< HEAD
-=======
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/DelayQueue.md">JAVA DelayQueue</a></span>
 
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/LinkedTransferQueue.md">JAVA LinkedTransferQueue</a></span>
@@ -109,9 +107,6 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/SynchronousQueue.md">JAVA SynchronousQueue</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadPoolExecutor.md">JAVA ThreadPoolExecutor</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadLocal.md">JAVA ThreadLocal</a></span>
-
-
->>>>>>> ce861242f90b4cd9e6874bb075937785a0892f97
 		</div>
     <h1 class="postTitle">JAVA 集合底层原理和源码解析</h1>
 		<div>
@@ -178,8 +173,6 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker9.md">Docker 容器数据卷</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker10.md">Docker DockerFile</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker11.md">Docker DockerFile实战</a></span>
-<<<<<<< HEAD
-=======
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker12.md">Docker 远程仓库</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker13.md">Docker 网络</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker14.md">Docker 容器互联-自定义网络</a></span>
@@ -187,7 +180,6 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker16.md">Docker 集成SpringBoot</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker17.md">Docker Compose待更新.....</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/docker/docker18.md">Docker Swarm待更新.....</a></span>
->>>>>>> ce861242f90b4cd9e6874bb075937785a0892f97
 		</div>
 
 		<h1 class="postTitle">Elasticsearch（持续更新）</h1>
@@ -286,6 +278,7 @@
 		<h1 class="postTitle">linux</h1>
     <h1 class="postTitle">Jekins</h1>
     <h1 class="postTitle">DevOps</h1>
+    <h1 class="postTitle">Mycat</h1>
 	</div>
   </body>
 </html>
