--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/SynchronousQueue.md">JAVA SynchronousQueue</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadPoolExecutor.md">JAVA ThreadPoolExecutor</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/concurrent/ThreadLocal.md">JAVA ThreadLocal</a></span>
+
+
 		</div>
     <h1 class="postTitle">JAVA 集合底层原理和源码解析</h1>
 		<div>
@@ -158,6 +160,12 @@
 
     <h1 class="postTitle">Redis</h1>
     <div>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis1.md">Redis NoSQL</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis2.md">Redis 概述和安装
+</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis3.md">Redis 性能测试</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis4.md">Redis 基础知识</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis5.md">Redis 常用命令</a></span>
     </div>
 
 		<h1 class="postTitle">Docker</h1>
@@ -250,6 +258,12 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/hadoop/hadoop9.md">Hadoop JAVA框架API实例</a></span>
 		</div>
 
+    <h1 class="postTitle">NIO和Netty</h1>
+    <div>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/nio/nio.md">NIO 概述</a></span>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/nio/nio2.md">NIO 详解</a></span>
+    </div>
+
 		<h1 class="postTitle">杂记</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/deep_copy.md">深度拷贝</a></span>
@@ -261,6 +275,11 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/同步异步和阻塞非阻塞.md">同步异步和阻塞非阻塞详解</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/零拷贝.md">零拷贝</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Overload和Override的区别.md">重载和复写</a></span>
+
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/jdk8与7的Map.md">jdk8与7的Map（未完）</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Api限流(待更新).md">Api限流(待更新)</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/Jemter压力测试(待更新).md">Jemter压力测试(待更新)</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/other/hash冲突(待更新).md">hash冲突(待更新)</a></span>
 		</div>
 
 		<h1 class="postTitle">持续更新中......</h1>
@@ -275,10 +294,10 @@
 		<h1 class="postTitle">JVM</h1>
 		<h1 class="postTitle">数据结构</h1>
 		<h1 class="postTitle">Rabbit</h1>
-		<h1 class="postTitle">linux</h1>
-    <h1 class="postTitle">Jekins</h1>
-    <h1 class="postTitle">DevOps</h1>
-    <h1 class="postTitle">Mycat</h1>
+		<h1 class="postTitle">Linux</h1>
+    <h1 class="postTitle">NIO</h1>
+    <h1 class="postTitle">Netty</h1>
+    <h1 class="postTitle">K8S</h1>
 	</div>
   </body>
 </html>
