--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="icon" href="../pic/icon/title.jpg" type="image/x-icon"/>
+    <link rel="icon" href="./blog/pic/icon/title.jpg" type="image/x-icon"/>
     <style media="screen">
       .postTitle {
           font-family: "Lato", Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -128,6 +128,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/collection/LinkedHashSet.md">JAVA LinkedHashSet</a></span>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/collection/TreeSet.md">JAVA TreeSet</a></span>
 		</div>
+
 		<h1 class="postTitle">数据库核心技术总结</h1>
 		<div>
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/Mysql/mysql1.md">MySQL 内部结构以及查询流程</a></span>
@@ -160,13 +161,17 @@
 
     <h1 class="postTitle">Redis</h1>
     <div>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis1.md">Redis NoSQL</a></span>
-      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis2.md">Redis 概述和安装
-</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis1.md">Redis NoSQL 概述</a></span>
+      <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis2.md">Redis 概述和安装</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis3.md">Redis 性能测试</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis4.md">Redis 基础知识</a></span>
       <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/redis/redis5.md">Redis 常用命令</a></span>
     </div>
+
+    	<h1 class="postTitle">Kafka</h1>
+      <div>
+        <span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/kafka/kafka1.md">Kafka 概述</a></span>
+      </div>
 
 		<h1 class="postTitle">Docker</h1>
 		<div>
@@ -224,7 +229,7 @@
 			<span class="link"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/java_core/core19.md">JAVA Queue</a></span>
 		</div>
 
-		<h1 class="postTitle">算法练习总结</h1>
+		<h1 class="postTitle">算法练习总结(持续更新)</h1>
 		<span class="button"><a  target="_blank" href="https://github.com/giantfoot/giantfoot.github.io/blob/master/blog/algorithm/leetcode.md" style="color:#fff">LEETCODE 题型汇总</a></span>
 		<div>
 			<p style="margin-left:20px"><b>动态规划</b></p>
