--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
     </style>
   </head>
   <body style="background-color:#eee;padding:0;margin:0">
+
     <div class="title">
-  		<div style="width:1000px;margin:0 auto;">
+  		<div style="width:1000px;margin:0 auto;display:inline-block">
   			<span class="title_content"><b>知易行难</b></span>
   			<span class="title_content"  style="margin-left:80px;margin-top:10px"><b>温故知新</b></span>
   		</div>
+      <div style="width:80px;height: 80px;margin:0 auto;display:inline-block">
+        <img src="./blog/pic/icon/title.jpg"></img>
+      </div>
   	</div>
+
 	<div class="outer">
     <h1 class="postTitle">Java 并发</h1>
 		<div>
