--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     		display:block;
     		margin-left:0px;
   	  }
+      img {
+          border: 1px solid #ddd;
+          border-radius: 4px;
+          padding: 5px;
+      }
     </style>
   </head>
   <body style="background-color:#eee;padding:0;margin:0">
